# mt-holidays

./: .editorconfig  Dockerfile  README.md  pyproject.toml  setup.cfg
mt_holidays/: main.py
